<?xml version="1.0"?>
<package>
  <name>obstacle_detection</name>
  <version>0.0.0</version>
  <description>PCL obstacle detection stack</description>
  <license>MIT</license>
  <author>zackq</author>
  <maintainer email="zakaria.bouzit@neo.farm">zackq</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>


  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>
